--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -4,17 +4,32 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:MauiApp1"
-    Shell.FlyoutBehavior="Disabled">
+    xmlns:pages="clr-namespace:MauiApp1.Pages" >
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+    <TabBar>
+        <Tab
+            Title = "Home">
+            <ShellContent ContentTemplate="{DataTemplate local:HomePage}" />
+            
+        </Tab>
 
-    <ShellContent
-        Title="Settings"
-        ContentTemplate="{DataTemplate local:SettingsPage}"
-        Route="SettingsPage" />
+        <Tab
+            Title = "Dogs">
+            <ShellContent ContentTemplate="{DataTemplate local:DogsPage}" />
 
+        </Tab>
+
+        <Tab
+            Title = "Account">
+            <ShellContent ContentTemplate="{DataTemplate local:AccountPage}" />
+
+        </Tab>
+
+        <Tab
+            Title = "Main Page">
+            <ShellContent ContentTemplate="{DataTemplate local:MainPage}" />
+
+        </Tab>
+    </TabBar>
 
 </Shell>
