--- a/Pages/AccountPage.xaml
+++ b/Pages/AccountPage.xaml
@@ -5,8 +5,23 @@
              Title="AccountPage">
     <VerticalStackLayout>
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="Account Profile"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
+        <Label 
+            Text="User Name"
+            VerticalOptions="Center" 
+            HorizontalOptions="Center" />
+        <Label 
+            Text="Contact Information"
+            VerticalOptions="Center" 
+            HorizontalOptions="Center" />
+        <Button Text="Return to Home Page"
+                VerticalOptions="Center"
+                HorizontalOptions="Center"/>
+        <Button 
+            Text="Edit Profile"
+            VerticalOptions="Center"
+            HorizontalOptions="Center"/>
     </VerticalStackLayout>
 </ContentPage>
