--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -3,10 +3,38 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiApp1.HomePage"
              Title="HomePage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+
+    <VerticalStackLayout Margin="10" HorizontalOptions="Start" >
+
+        <HorizontalStackLayout Spacing="10" VerticalOptions="Start" >
+            <Label Text="Human Name" 
+                    FontAttributes="Bold">
+            </Label>
+            <Entry WidthRequest="125" HeightRequest="40" ></Entry>
+            <Label Text="please enter the name" TextColor="Blue" 
+                   FontAttributes="Italic">
+            </Label>
+        </HorizontalStackLayout>
+
+        <HorizontalStackLayout Spacing="10" VerticalOptions="Start" >
+            <Label Text="Dog Name" 
+                    FontAttributes="Bold">
+            </Label>
+            <Entry WidthRequest="125" HeightRequest="40" ></Entry>
+            <Label Text="please enter the name" TextColor="Blue" 
+                    FontAttributes="Italic">
+            </Label>
+        </HorizontalStackLayout>
+
+        <Image 
+            Source="cocoa_test_image.JPG"
+            HeightRequest="250"
+            WidthRequest="250"
+            HorizontalOptions="Start"
+        />
+
     </VerticalStackLayout>
+
+
+
 </ContentPage>
