Added A demo page

--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -31,7 +31,7 @@
 
         </Tab>
         <Tab
-            Title = "Test Page">
+            Title = "Main Page">
             <ShellContent ContentTemplate="{DataTemplate local:TestPage}" />
 
         </Tab>
