--- a/Pages/TrainerSearch.xaml
+++ b/Pages/TrainerSearch.xaml
@@ -4,9 +4,29 @@
              x:Class="MauiApp1.Pages.TrainerSearch"
              Title="TrainerSearch">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <Grid>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <HorizontalStackLayout Spacing="5" Margin="15" Grid.Row="0">
+                <SearchBar Placeholder="Search..." WidthRequest="250" />
+                <ImageButton HeightRequest="40"
+                     WidthRequest="40"
+                     Source="filter.png"
+                     BackgroundColor="Blue"
+                     CornerRadius="10"
+                     Padding="5"
+                     Scale="1.00"/>
+            </HorizontalStackLayout>
+            <Label 
+               Text="Find a Trainer"
+               VerticalOptions="Center" 
+               HorizontalOptions="Center" />
+        </Grid>
     </VerticalStackLayout>
 </ContentPage>
