--- a/Pages/General.xaml
+++ b/Pages/General.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiApp1.Pages.General"
-             Title="General">
+             x:Class="MauiApp1.General"
+           >
     <VerticalStackLayout>
         <Label 
       Text="Account"
@@ -16,17 +16,26 @@
       Text="Find a Trainer"
       VerticalOptions="Center" 
       HorizontalOptions="Center" />
-            <Label 
-      Text="Settings"
-      VerticalOptions="Center" 
-      HorizontalOptions="Center" />
-            <Button Text="Return to Home Page"
-          VerticalOptions="Center"
-          HorizontalOptions="Center"/>
+            <Button 
+        Text="Trainer Search"
+        VerticalOptions="Fill" 
+        HorizontalOptions="Fill" />
+        <Label 
+        Text="Settings"
+        VerticalOptions="Center" 
+        HorizontalOptions="Center" />
         <Button 
-      Text="Edit Profile"
-      VerticalOptions="Center"
-      HorizontalOptions="Center"/>
-       
+        Text="Adjust Settings"
+        VerticalOptions="Fill" 
+        HorizontalOptions="Fill" />
+        <Label 
+        Text="Data"
+        VerticalOptions="Center" 
+        HorizontalOptions="Center" />
+        <Button 
+        Text="Print/Export"
+        VerticalOptions="Fill" 
+        HorizontalOptions="Fill" />
+
     </VerticalStackLayout>
 </ContentPage>
