--- a/Pages/DogsPage.xaml
+++ b/Pages/DogsPage.xaml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+             xmlns:listview="clr-namespace:Syncfusion.Maui.ListView;assembly=Syncfusion.Maui.ListView"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiApp1.DogsPage"
-             >
-
+             xmlns:local="clr-namespace:MauiApp1">
+    <ContentPage.BindingContext>
+        <local:BookViewModel></local:BookViewModel>
+    </ContentPage.BindingContext>
+    
+    
     <VerticalStackLayout>
         <Grid>
 
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height=".5*"/>
+                <RowDefinition Height=".5*"/>
+                <RowDefinition Height=".2*"/>
             </Grid.RowDefinitions>
 
             <HorizontalStackLayout Spacing="5" Margin="15" Grid.Row="0">
@@ -34,7 +40,7 @@
 
             </HorizontalStackLayout>
             <Label Text="Recent: " Grid.Row="1" FontAttributes="Bold" Margin="4" FontFamily="OpenSans-SemiBold.ttf"/>
-            <Frame Margin="5" Grid.Row="2" Padding="0" HeightRequest="200" BackgroundColor="Gray"  >
+            <Frame Margin="5" Grid.Row="2" Padding="0" HeightRequest="200" BackgroundColor="Gray">
                 <Frame.GestureRecognizers>
                     <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
                 </Frame.GestureRecognizers>
@@ -48,31 +54,36 @@
 
                 </VerticalStackLayout>
             </Frame>
-
-            <Frame Margin="5" Grid.Row="3">
-                <TableView>
-                    <TableRoot>
-                        <TableSection>
-                            <ImageCell Text="Champ"
-                                       Detail="Bob Ross"
-                                       ImageSource="dog2.jpg"
-                                       Tapped="ImageCell_Tapped"/>
-                            <ImageCell Text="Bravo"
-                                       Detail="John Smith"
-                                       ImageSource="dog3.jpg"
-                                       Tapped="ImageCell_Tapped"/>
-                            <ImageCell Text="Peanut"
-                                       Detail="Bob Ross"
-                                       ImageSource="dog4.jpg"
-                                       Tapped="ImageCell_Tapped"/>
-                            <ImageCell Text="Lily"
-                                       Detail="John Cena"
-                                       ImageSource="dog5.jpg"
-                                       Tapped="ImageCell_Tapped"/>
-
-                        </TableSection>
-                    </TableRoot>
-                </TableView>
+            <Label Text="All Dogs: " Grid.Row="3" FontAttributes="Bold" Margin="4" FontFamily="OpenSans-SemiBold.ttf"/>
+            <Frame Margin="5" Grid.Row="4" BackgroundColor="Gray" HeightRequest="400" Padding="5">
+                <listview:SfListView x:Name="listView"  ItemsSource="{Binding BookDetails}" ItemSize="140" SelectionMode="None" SelectionGesture="Tap" TapCommandParameter="TapGestureRecognizer_Tapped" SelectionBackground="Red" >
+                    <listview:SfListView.ItemsLayout>
+                        <listview:GridLayout SpanCount="2"/>
+                    </listview:SfListView.ItemsLayout>
+                    <listview:SfListView.ItemTemplate>
+                        <DataTemplate>
+                            <Frame Padding="0" Margin="1" CornerRadius="15">
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+                                </Frame.GestureRecognizers>
+                                <Grid Padding="0">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height=".3*"/>
+                                        <RowDefinition Height=".2*"/>
+                                        <RowDefinition Height=".1*"/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Image Source="{Binding BookImage}" Aspect="AspectFill" Grid.RowSpan="3" Grid.ColumnSpan="2"/>
+                                    <Label Text="{Binding BookName}" Padding="0" Margin="4" FontAttributes="Bold" TextColor="Blue" FontSize="21" Grid.ColumnSpan="2" Grid.Row="0" FontFamily="OpenSans-SemiBold.ttf"/>
+                                    <Label Text="{Binding BookDescription}" Padding="2" TextColor="White" Grid.Row="2" Grid.Column="0" FontSize="15" HorizontalOptions="Center"/>
+                                </Grid>
+                            </Frame>
+        
+                        </DataTemplate>
+                    </listview:SfListView.ItemTemplate>
+                </listview:SfListView>
             </Frame>
 
 
