--- a/Pages/General.xaml
+++ b/Pages/General.xaml
@@ -5,37 +5,42 @@
            >
     <VerticalStackLayout>
         <Label 
-      Text="Account"
-      VerticalOptions="Start" 
-      HorizontalOptions="Start" />
+    Text="General"   Margin="5" FontAttributes="Bold" FontSize="25"
+    VerticalOptions="Center" 
+    HorizontalOptions="Center" />
+        
+        <Label 
+      Text="Account"   Margin="5"
+      VerticalOptions="Center" 
+      HorizontalOptions="Center" />
             <Button 
      Text="Account"
-     VerticalOptions="Fill" 
-     HorizontalOptions="Fill" />
+     VerticalOptions="Center"  Margin="5"
+     HorizontalOptions="CenterAndExpand" /> 
             <Label 
-      Text="Find a Trainer"
+      Text="Find a Trainer"   Margin="5"
       VerticalOptions="Center" 
       HorizontalOptions="Center" />
             <Button 
         Text="Trainer Search"
-        VerticalOptions="Fill" 
-        HorizontalOptions="Fill" />
+        VerticalOptions="Center"  Margin="5"
+        HorizontalOptions="CenterAndExpand" />
         <Label 
-        Text="Settings"
+        Text="Settings" Margin="5"
         VerticalOptions="Center" 
         HorizontalOptions="Center" />
         <Button 
-        Text="Adjust Settings"
-        VerticalOptions="Fill" 
-        HorizontalOptions="Fill" />
+        Text="Adjust Settings"  Margin="5"
+        VerticalOptions="Center"  
+        HorizontalOptions="CenterAndExpand" />
         <Label 
-        Text="Data"
+        Text="Data"  Margin="5"
         VerticalOptions="Center" 
         HorizontalOptions="Center" />
         <Button 
-        Text="Print/Export"
-        VerticalOptions="Fill" 
-        HorizontalOptions="Fill" />
+        Text="Print/Export"  Margin="5"
+        VerticalOptions="Center" 
+        HorizontalOptions="CenterAndExpand" />
 
     </VerticalStackLayout>
 </ContentPage>
