--- a/Pages/General.xaml
+++ b/Pages/General.xaml
@@ -15,14 +15,14 @@
       HorizontalOptions="Center" />
             <Button 
      Text="Account"
-     VerticalOptions="Center"  Margin="5"
+     VerticalOptions="Center"  Margin="5" Clicked="AccountPage_Clicked"
      HorizontalOptions="CenterAndExpand" /> 
             <Label 
       Text="Find a Trainer"   Margin="5"
       VerticalOptions="Center" 
       HorizontalOptions="Center" />
             <Button 
-        Text="Trainer Search"
+        Text="Trainer Search" Clicked="TrainerSearch_Clicked"
         VerticalOptions="Center"  Margin="5"
         HorizontalOptions="CenterAndExpand" />
         <Label 
@@ -30,7 +30,7 @@
         VerticalOptions="Center" 
         HorizontalOptions="Center" />
         <Button 
-        Text="Adjust Settings"  Margin="5"
+        Text="Adjust Settings"  Margin="5"  Clicked="SettingsPage_Clicked"
         VerticalOptions="Center"  
         HorizontalOptions="CenterAndExpand" />
         <Label 
@@ -38,7 +38,7 @@
         VerticalOptions="Center" 
         HorizontalOptions="Center" />
         <Button 
-        Text="Print/Export"  Margin="5"
+        Text="Print/Export"  Margin="5" Clicked="DataExportPage_Clicked"
         VerticalOptions="Center" 
         HorizontalOptions="CenterAndExpand" />
 
