--- a/Pages/SettingsPage.xaml
+++ b/Pages/SettingsPage.xaml
@@ -5,8 +5,25 @@
              Title="SettingsPage">
     <VerticalStackLayout>
         <Label 
-        Text="Welcome to .NET MAUI!"
+        Text="Settings" FontSize="24"
         VerticalOptions="Center" 
         HorizontalOptions="Center" />
+        <Label 
+        Text="Notifications"
+        VerticalOptions="Center" 
+        HorizontalOptions="Center" />
+        <Label 
+       Text="Privacy"
+       VerticalOptions="Center" 
+       HorizontalOptions="Center" />
+        <Label 
+        Text="Deactivate Account"
+        VerticalOptions="Center" 
+        HorizontalOptions="Center" />
+        <Label 
+        Text="Delete Account"
+        VerticalOptions="Center" 
+        HorizontalOptions="Center" />
+      
     </VerticalStackLayout>
 </ContentPage>
