edited account and settings pages with a skeleton base

--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -46,5 +46,6 @@
     <ShellContent ContentTemplate="{DataTemplate local:TrainerSearch}"/>
     <ShellContent ContentTemplate="{DataTemplate local:AccountPage}"/>
     <ShellContent ContentTemplate="{DataTemplate local:SettingsPage}"/>
-    
+    <ShellContent ContentTemplate="{DataTemplate local:HomePage}"/>
+
 </Shell>
