--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -4,34 +4,34 @@
              x:Class="MauiApp1.HomePage"
              Title="HomePage">
 
-    <VerticalStackLayout Margin="10" HorizontalOptions="Start" >
+    <VerticalStackLayout>
 
         <HorizontalStackLayout Spacing="10" VerticalOptions="Start" >
             <Label Text="Human Name" 
-                    FontAttributes="Bold">
+                        FontAttributes="Bold">
             </Label>
             <Entry WidthRequest="125" HeightRequest="40" ></Entry>
             <Label Text="please enter the name" TextColor="Blue" 
-                   FontAttributes="Italic">
+                       FontAttributes="Italic">
             </Label>
         </HorizontalStackLayout>
 
         <HorizontalStackLayout Spacing="10" VerticalOptions="Start" >
             <Label Text="Dog Name" 
-                    FontAttributes="Bold">
+                        FontAttributes="Bold">
             </Label>
             <Entry WidthRequest="125" HeightRequest="40" ></Entry>
             <Label Text="please enter the name" TextColor="Blue" 
-                    FontAttributes="Italic" >
+                        FontAttributes="Italic" >
             </Label>
         </HorizontalStackLayout>
 
         <Image 
-            Source="cocoa_test_image.JPG"
-            HeightRequest="250"
-            WidthRequest="250"
-            HorizontalOptions="Start"
-        />
+                Source="cocoa_test_image.JPG"
+                HeightRequest="250"
+                WidthRequest="250"
+                HorizontalOptions="Start"
+            />
 
     </VerticalStackLayout>
 
