--- a/Pages/DogProfilePage.xaml
+++ b/Pages/DogProfilePage.xaml
@@ -4,13 +4,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiApp1.DogProfilePage"
              xmlns:local="clr-namespace:MauiApp1"
-             Shell.NavBarIsVisible="false">
+             Shell.NavBarIsVisible="false"
+             Shell.TabBarIsVisible="false">
     <ContentPage.BindingContext>
-        <local:BookViewModel></local:BookViewModel>
+        <local:BehaviorViewModel></local:BehaviorViewModel>
     </ContentPage.BindingContext>
 
     <VerticalStackLayout>
-        <Grid>
+        <Grid Padding="0" Margin="0">
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
@@ -23,59 +24,74 @@
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width=".5*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width=".5*"/>
             </Grid.ColumnDefinitions>
-            <Frame Margin="5" Grid.Row="1" Grid.Column="1"  Padding="0" HeightRequest="200" BackgroundColor="Gray">
+            <Frame Margin="0" Grid.Row="1" Grid.Column="1"  Padding="0" HeightRequest="150" WidthRequest="150" BackgroundColor="Gray">
                 <Image Source="dog1.jpg" Aspect="AspectFill" />
             </Frame>
-            <Frame Margin="5" Grid.Row="1" Grid.Column="0"  Padding="5" HeightRequest="200" BackgroundColor="Gray">
-                <VerticalStackLayout Padding="5">
+            <Frame Margin="5" Grid.Row="1" Grid.Column="0"  Padding="5" HeightRequest="150" BackgroundColor="Gray">
+                <VerticalStackLayout Padding="2" Spacing="0">
                     <Label Text="Cloud" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Large" HorizontalOptions="Center"/>
-                    <HorizontalStackLayout>
-                        <Label Text="Owner:"  Padding="2" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
-                        <Label Text="Anthony D'Antonio" Padding="2" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
+                    <HorizontalStackLayout Spacing="4">
+                        <Label Text="Owner:"  Padding="0" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
+                        <Label Text="Anthony D'Antonio" Padding="0" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
                     </HorizontalStackLayout>
-                    <HorizontalStackLayout>
-                        <Label Text="Breed:"  Padding="2" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
-                        <Label Text="Samoyed" Padding="2" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
+                    <HorizontalStackLayout Spacing="4">
+                        <Label Text="Breed:"  Padding="0" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
+                        <Label Text="Samoyed" Padding="0" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
                     </HorizontalStackLayout>
-                    <HorizontalStackLayout>
-                        <Label Text="Sex:"  Padding="2" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
-                        <Label Text="Male" Padding="2" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
+                    <HorizontalStackLayout Spacing="4">
+                        <Label Text="Sex:"  Padding="0" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
+                        <Label Text="Male" Padding="0" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
                     </HorizontalStackLayout>
-                    <HorizontalStackLayout>
-                        <Label Text="Age:"  Padding="2" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
-                        <Label Text="5" Padding="2" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
+                    <HorizontalStackLayout Spacing="4">
+                        <Label Text="Age:"  Padding="0" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
+                        <Label Text="5" Padding="0" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
                     </HorizontalStackLayout>
-                    <HorizontalStackLayout>
-                        <Label Text="Trainer(s):"  Padding="2" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
-                        <Label Text="John Smith" Padding="2" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
+                    <HorizontalStackLayout Spacing="4">
+                        <Label Text="Trainer(s):"  Padding="0" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
+                        <Label Text="John Smith" Padding="0" FontAttributes="Bold" FontFamily="OpenSans-SemiBold.ttf"  FontSize="Small" HorizontalOptions="Center"/>
                     </HorizontalStackLayout>
                 </VerticalStackLayout>
             </Frame>
             <Label Text="Behaviors: " Grid.Row="3" FontAttributes="Bold" Margin="4" FontFamily="OpenSans-SemiBold.ttf"/>
-            <Frame Margin="5" Grid.Row="4" Grid.ColumnSpan="2" BackgroundColor="Gray" HeightRequest="200" Padding="5">
-                <listview:SfListView x:Name="listView"  ItemsSource="{Binding BookDetails}" ItemSize="140" IsScrollingEnabled="False" ScrollBarVisibility="Never" SelectionMode="None" SelectionGesture="Tap" TapCommandParameter="TapGestureRecognizer_Tapped" SelectionBackground="Red" >
+            <Frame Margin="5" Grid.Row="4" Grid.ColumnSpan="2" BackgroundColor="Gray" HeightRequest="330" Padding="5">
+                <Frame.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+                </Frame.GestureRecognizers>
+
+                <listview:SfListView x:Name="listView"  ItemsSource="{Binding BehaviorDetails}" ItemSize="80" IsScrollingEnabled="False" ScrollBarVisibility="Never" SelectionMode="None" SelectionGesture="Tap" SelectionBackground="Red" >
                     <listview:SfListView.ItemsLayout>
-                        <listview:GridLayout SpanCount="2"/>
+                        <listview:GridLayout SpanCount="1"/>
                     </listview:SfListView.ItemsLayout>
                     <listview:SfListView.ItemTemplate>
                         <DataTemplate>
-                            <Frame Padding="0" Margin="1" CornerRadius="15">
+                            <Frame Padding="2" Margin="2" CornerRadius="15" BackgroundColor="White">
                                 <Frame.GestureRecognizers>
                                     <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
                                 </Frame.GestureRecognizers>
-                                <Grid Padding="0">
+                                <Grid Padding="0" Margin="0">
                                     <Grid.RowDefinitions>
+                                        <RowDefinition Height=".4*"/>
                                         <RowDefinition Height=".3*"/>
-                                        <RowDefinition Height=".2*"/>
-                                        <RowDefinition Height=".1*"/>
+                                        <RowDefinition Height=".3*"/>
+
                                     </Grid.RowDefinitions>
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width=".25*"/>
+                                        <ColumnDefinition Width=".8*"/>
                                     </Grid.ColumnDefinitions>
-                                    
-                                    
+                                    <Image Grid.Column="0"  Grid.RowSpan ="2" Grid.Row="0" Source="{Binding SkillLevel}" />
+                                    <Label Grid.Column="1" Grid.Row="0" Text="{Binding SkillName}" Margin="0" TextColor="Black" FontSize="Large" VerticalOptions="Center"/>
+                                    <HorizontalStackLayout Grid.Column="1" Grid.Row="1" Spacing="5">
+                                        <Label  Text="Trained By: " Margin="0" TextColor="Black" FontSize="Small" VerticalOptions="Center"/>
+                                        <Label  Text="{Binding SkillTrainer}" Margin="0" TextColor="Black" FontSize="Small" VerticalOptions="Center"/>
+                                    </HorizontalStackLayout>
+                                    <HorizontalStackLayout Spacing="5" Padding="0" Grid.Row="2" Grid.ColumnSpan="2" HorizontalOptions="Center">
+                                        <Label TextColor="Black" FontAttributes="Italic" Text="Last Trained: "/>
+                                        <Label   TextColor="Black" FontAttributes="Italic" Text="{Binding SkillDate}"/>
+                                    </HorizontalStackLayout>
+
                                 </Grid>
                             </Frame>
 
@@ -85,7 +101,7 @@
             </Frame>
             
             <Label Text="Training History: " Grid.Row="5" FontAttributes="Bold" Margin="4" FontFamily="OpenSans-SemiBold.ttf"/>
-            <Frame Margin="5" Grid.Row="6" Grid.ColumnSpan="2" BackgroundColor="Gray" HeightRequest="200" Padding="5">
+            <Frame Margin="5" Grid.Row="6" Grid.ColumnSpan="2" BackgroundColor="Gray" HeightRequest="250" Padding="5">
             </Frame>
 
 
