--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -28,7 +28,7 @@
 
         <Tab
             Title = "Main Page">
-            <ShellContent ContentTemplate="{DataTemplate local:MainPage}" />
+            <ShellContent ContentTemplate="{DataTemplate local:BehaviorPage}" />
 
         </Tab>
         <Tab
